<resources>
    <string name="app_name">My Application</string>
    <string name="logo_name">OLYMPIA</string>
    <string name="slogan_name">Created by Olympians</string>
    <string name="powered_by">powered by olympians</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="ratings_and_reviews">Ratings and Reviews</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="all_categories">All Categories</string>
    <string name="profile">Profile</string>
    <string name="expand_all">Expand</string>
    <!--Strings For dashboard -->
    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airport</string>
    <!--Titles and Descriptions-->
    <string name="featured_locations">All featured locations</string>
    <string name="featured_locations_descriptions">All the locations</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="Categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search</string>

</resources>