<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/menu"/>
        <item
            android:id="@+id/nav_search"
            android:title="@string/search_text"
            android:icon="@drawable/search"/>
        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/Categories"
            android:icon="@drawable/category_icon"/>
        <item
            android:id="@+id/nav_add"
            android:title="@string/add"
            android:icon="@drawable/add_icon"/>
        <item
            android:id="@+id/nav_wishlist"
            android:title="@string/wishlist"
            android:icon="@drawable/wishlist_icon"/>
        <item
            android:id="@+id/nav_cart"
            android:title="@string/cart"
            android:icon="@drawable/cart_image"/>
        <item
            android:id="@+id/nav_ratings"
            android:title="@string/ratings_and_reviews"
            android:icon="@drawable/ratings_icon"/>
        <item
            android:id="@+id/nav_notification"
            android:title="@string/notification"
            android:icon="@drawable/notification_icon"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/settings_icon"/>

    </group>

    <item android:title="Profile">
        <menu>

            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout"/>



            </group>

        </menu>

    </item>

    <item android:title="Categories">
        <menu>

            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_men"
                    android:title="@string/men"
                    android:icon="@drawable/man"/>
                <item
                    android:id="@+id/nav_women"
                    android:title="@string/women"
                    android:icon="@drawable/woman"/>
                <item
                    android:id="@+id/nav_kids"
                    android:title="@string/kids"
                    android:icon="@drawable/kids"/>



            </group>

        </menu>

    </item>

    <item android:title="Share">
        <menu>

            <group
                android:checkableBehavior="none">
                <item
                    android:id="@+id/share"
                    android:title="@string/men"
                    android:icon="@drawable/man"/>
                <item
                    android:id="@+id/connect"
                    android:title="@string/women"
                    android:icon="@drawable/woman"/>




            </group>

        </menu>

    </item>
</menu>